fix(view): better responsiveness with flexbox (#300)
* fix(view): make statistics disappear under 850px viewport #288

* fix(view): remove hard coded width value #288

* fix(view): make commit-message ellipsis reponsive #288

--- a/packages/view/src/components/VerticalClusterList/VerticalClusterList.scss
+++ b/packages/view/src/components/VerticalClusterList/VerticalClusterList.scss
@@ -4,7 +4,7 @@
   height: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
-  width: 75%;
+  flex-grow: 1;
 
   svg.cluster-graph {
     min-width: 84px;
